--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/svelte": "^5.7.2",
+    "@astrojs/svelte": "^6.0.1",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource-variable/jetbrains-mono": "^5.1.1",
     "@fontsource/roboto": "^5.1.0",
+    "@iconify-json/fa6-brands": "^1.2.1",
+    "@iconify-json/fa6-regular": "^1.2.1",
+    "@iconify-json/fa6-solid": "^1.2.1",
+    "@iconify-json/material-symbols": "^1.2.5",
+    "@iconify/svelte": "^4.0.2",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@swup/astro": "^1.4.1",
-    "astro": "^4.16.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "astro": "^4.16.13",
     "astro-compress": "^2.3.5",
     "astro-icon": "^1.1.2",
     "colorjs.io": "^0.5.2",
@@ -32,6 +39,7 @@
     "mdast-util-to-string": "^4.0.0",
     "overlayscrollbars": "^2.10.0",
     "pagefind": "^1.2.0",
+    "photoswipe": "^5.4.4",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-components": "^0.3.0",
@@ -39,10 +47,13 @@
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
     "remark-directive-rehype": "^0.4.2",
+    "remark-github-admonitions-to-directives": "^2.1.0",
     "remark-math": "^6.0.0",
     "sanitize-html": "^2.13.1",
+    "sass": "^1.80.6",
     "sharp": "^0.33.5",
-    "svelte": "^5.1.10",
+    "stylus": "^0.64.0",
+    "svelte": "^5.2.2",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "unist-util-visit": "^5.0.0"
@@ -50,20 +61,10 @@
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
     "@biomejs/biome": "1.9.4",
-    "@iconify-json/fa6-brands": "^1.2.1",
-    "@iconify-json/fa6-regular": "^1.2.1",
-    "@iconify-json/fa6-solid": "^1.2.1",
-    "@iconify-json/material-symbols": "^1.2.6",
-    "@iconify/svelte": "^4.0.2",
     "@rollup/plugin-yaml": "^4.1.2",
-    "@tailwindcss/typography": "^0.5.15",
     "@types/markdown-it": "^14.1.2",
     "@types/mdast": "^4.0.4",
-    "@types/sanitize-html": "^2.13.0",
-    "photoswipe": "^5.4.4",
-    "remark-github-admonitions-to-directives": "^2.1.0",
-    "sass": "^1.80.6",
-    "stylus": "^0.64.0"
+    "@types/sanitize-html": "^2.13.0"
   },
   "pnpm": {
     "overrides": {
