--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.9",
+    "@astrojs/node": "^8.0.0",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^6.0.1",
@@ -34,9 +35,11 @@
     "astro-compress": "^2.3.5",
     "astro-icon": "^1.1.2",
     "colorjs.io": "^0.5.2",
+    "express": "^4.21.2",
     "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
+    "node": "^22.13.0",
     "overlayscrollbars": "^2.10.0",
     "pagefind": "^1.2.0",
     "photoswipe": "^5.4.4",
