--- a/package.json
+++ b/package.json
@@ -11,55 +11,54 @@
     "type-check": "tsc --noEmit --isolatedDeclarations",
     "new-post": "node scripts/new-post.js",
     "format": "biome format --write ./src",
-    "lint": "biome check --apply ./src"
+    "lint": "biome check --apply ./src",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^3.1.9",
-    "@astrojs/node": "^8.0.0",
-    "@astrojs/rss": "^4.0.9",
+    "@astrojs/mdx": "^4.0.7",
+    "@astrojs/node": "^9.0.2",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/svelte": "^6.0.1",
-    "@astrojs/tailwind": "^5.1.2",
-    "@fontsource-variable/jetbrains-mono": "^5.1.1",
-    "@fontsource/roboto": "^5.1.0",
-    "@iconify-json/fa6-brands": "^1.2.1",
-    "@iconify-json/fa6-regular": "^1.2.1",
-    "@iconify-json/fa6-solid": "^1.2.1",
-    "@iconify-json/material-symbols": "^1.2.5",
-    "@iconify/svelte": "^4.0.2",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@swup/astro": "^1.4.1",
-    "@tailwindcss/typography": "^0.5.15",
-    "astro": "^4.16.13",
-    "astro-compress": "^2.3.5",
-    "astro-icon": "^1.1.2",
-    "colorjs.io": "^0.5.2",
-    "express": "^4.21.2",
-    "fuwari-edited": "file:",
+    "@astrojs/svelte": "7.0.4",
+    "@astrojs/tailwind": "^5.1.5",
+    "@fontsource-variable/jetbrains-mono": "^5.1.2",
+    "@fontsource/roboto": "^5.1.1",
+    "@iconify-json/fa6-brands": "^1.2.5",
+    "@iconify-json/fa6-regular": "^1.2.3",
+    "@iconify-json/fa6-solid": "^1.2.3",
+    "@iconify-json/material-symbols": "^1.2.13",
+    "@iconify/svelte": "^4.2.0",
+    "@swup/astro": "^1.5.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "astro": "5.1.9",
+    "astro-compress": "^2.3.6",
+    "astro-icon": "^1.1.5",
     "hastscript": "^9.0.0",
+    "katex": "^0.16.21",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "node": "^22.13.0",
-    "overlayscrollbars": "^2.10.0",
-    "pagefind": "^1.2.0",
+    "node": "^18.20.6",
+    "overlayscrollbars": "^2.10.1",
+    "pagefind": "^1.3.0",
     "photoswipe": "^5.4.4",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-components": "^0.3.0",
     "rehype-katex": "^7.0.1",
     "rehype-slug": "^6.0.0",
-    "remark-directive": "^3.0.0",
+    "remark-directive": "^3.0.1",
     "remark-directive-rehype": "^0.4.2",
     "remark-github-admonitions-to-directives": "^2.1.0",
     "remark-math": "^6.0.0",
-    "sanitize-html": "^2.13.1",
-    "sass": "^1.80.6",
+    "remark-sectionize": "^2.1.0",
+    "sanitize-html": "^2.14.0",
+    "sass": "^1.83.4",
     "sharp": "^0.33.5",
     "stylus": "^0.64.0",
-    "svelte": "^5.2.2",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
+    "svelte": "^5.19.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
@@ -68,13 +67,9 @@
     "@rollup/plugin-yaml": "^4.1.2",
     "@types/markdown-it": "^14.1.2",
     "@types/mdast": "^4.0.4",
-    "@types/sanitize-html": "^2.13.0"
+    "@types/sanitize-html": "^2.13.0",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1"
   },
-  "pnpm": {
-    "overrides": {
-      "vite-imagetools": "^6.2.7",
-      "sharp": "^0.33.0"
-    }
-  },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.14.4"
 }
